Bug fix, both dark mode and opening app functions are working again

--- a/css/default.css
+++ b/css/default.css
@@ -3,7 +3,7 @@ https://www.codingwithjesse.com/blog/100-percent-height-interface/
 https://stackoverflow.com/questions/1664785/resize-html5-canvas-to-fit-window
 */
 
-html {
+html, body {
   width:  100%;
   height: 100%;
   margin: 0;
@@ -17,16 +17,16 @@ body {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.panel {
-    margin: 0;
-    padding: 2px;
-}
-
 .canvas {
     left: 0;
     top: 0;
     overflow: hidden;
     z-index: -1;
+}
+
+.panel {
+    margin: 0;
+    padding: 2px;
 }
 
 .button{
@@ -40,8 +40,13 @@ body {
 .dark-mode {
     background-color: #222;
     color: #eee;
-    button{
+    button {
+        background-color: #eee;
+        color: #222;
+    };
+    panel {
         background-color: #eee;
         color: #222;
     }
+
 }
